Closed Bug 1668314 Opened 4 years ago Closed 4 years ago

FuncCancelableRunnable should not assume mFunc.isSome()

Categories

(Core :: XPCOM, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: sg, Assigned: sg)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Rather, after calling Cancel, Run should be a no-op.

Pushed by sgiesecke@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1406f8da7b25
FuncCancelableRunnable::Run should be a no-op after Cancel. r=nika
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: