Bug 1668314 - FuncCancelableRunnable::Run should be a no-op after Cancel. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D91948